/*
 * $Id: ChangeLog,v 1.2790 2004/04/15 16:04:13 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-04-15 13:55 UTC-0300 Luiz Rafael Culik<culikr / at /brturbo.com >
  * include/Makefile
    + Added local.h to list
  * utils//hbmake/hbmake.prg
    ! minor fix

2004-04-15 20:05 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * doc/en/hb_macro.txt
  * include/hbapi.h
  * include/hbmacro.h
  * source/vm/macro.c
    - Reverted my previous Type() Clipper-compatibility fix, which was
      incorrect.
    ! Fixed Type() to be Clipper-compatible on undeclared memvars.
      Modeled after Ryszard Glab's Harbour fix, but with small changes to
      make it work in xHarbour.
  * tests/macro.prg
    ! Fixed to reflect real Clipper behaviour, some checks added.
  * source/rtl/errorsys.prg
    * Fixed a typo.

2004-04-15 01:15 UTC-0800 Brian Hays <bhays@abacuslaw.com>

  * contrib/rdd_ads/adsfunc.c
    + added AdsGetConnectionType( [hConnect] ) and AdsGetTableConType() to
      retrieve the type of a given connection handle or the type
      of connection used in the current workarea.
      Thanks to Randy Portnoff for the original code.

  * contrib/rdd_ads/doc/en/adsfuncs.txt
    * Docs for above funcs, plus minor formatting and grammar fixes.

2004-04-15 05:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/pp/ppcore.c
  * source/compiler/cmdcheck.c
  * include/hbcomp.h
    ! reverted rems of hb_pp_STD_CH and /u
      (was thinking only UNDEF)

2004-04-15 03:50 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/pp/ppcore.c
  * source/compiler/cmdcheck.c
  * source/compiler/hbusage.c
  * include/hbcomp.h
    - remmed unused hb_pp_STD_CH and UNDEF switch from command line

  * source/vm/itemapi.c
    ! add define for _MSC_VER on _finite() declaration.
      (BTW: What is __MSC__ ?)
